--- a/test/fixtures/storages.yml
+++ b/test/fixtures/storages.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  key: MyString
+  encrypted_name: MyString
+  encrypted_key: MyString
 
 two:
-  name: MyString
-  key: MyString
+  encrypted_name: MyString
+  encrypted_key: MyString
